--- a/index.html
+++ b/index.html
@@ -110,6 +110,44 @@
             <section id="portfolio">
                 <h2>PROFILE</h2>
                 <ul class="both pf_list">
+					<li class="shadow pf_4">
+						<a href="https://2ju2.github.io/viget/">
+							<figure><img src="img/pc_viget.png"></figure>
+						</a>
+						<div class="caption">
+							<h3>www.viget.com 카피페이지</h3>
+							<p>반응형 사이트</p>
+							<dl class="both">
+								<dt>프로젝트 설명</dt>
+								<dd>www.viget.com 홈페이지 디자인을 활용하여, 새로운 소스로 제작</dd>
+								<dt>역할 및 담당</dt>
+								<dd>퍼블리싱</dd>
+								<dt>기여도</dt>
+								<dd>100%</dd>
+							</dl>
+							<div classs="button_wrap"><a href="https://2ju2.github.io/viget/" class="btn">Website Go</a></div>
+						</div>
+					</li>  
+					<li class="shadow pf_3">
+                        <a href="https://2ju2.github.io/markpro/">
+                            <figure><img src="img/pc_temp.png"></figure>
+                        </a>
+                        <div class="caption">
+                            <h3>해당사 전용 사이트 템플릿 제작</h3>
+                            <p>반응형 사이트</p>
+                            <dl class="both">
+                                <dt>프로젝트 설명</dt>
+                                <dd>해당사에서 사이트를 새로 제작시 필요한 기본템플릿을 가진 사이트 구축</dd>
+                                <dt>역할 및 담당</dt>
+                                <dd>퍼블리싱, 기획, 디자인</dd>
+                                <dt>기여도</dt>
+                                <dd>100%</dd>
+                                <dt>성과</dt>
+                                <dd>해당 템플릿을 활용하는 웹사이트 초기 세팅작업일 축소</dd>                                                                 
+                            </dl>
+                            <div classs="button_wrap"><a href="https://2ju2.github.io/markpro/" class="btn">Website Go</a></div>
+                        </div>
+                    </li> 
                     <li class="shadow pf_1">
                         <a href="http://www.wholeip.com/">
                             <figure><img src="img/pc_wholeip.png"></figure>
@@ -149,45 +187,7 @@
                             </dl>
                             <div classs="button_wrap"><a href="http://www.markpro.com/" class="btn">Website Go</a></div>
                         </div>
-                    </li>  
-                    <li class="shadow pf_3">
-                        <a href="https://2ju2.github.io/markpro/">
-                            <figure><img src="img/pc_temp.png"></figure>
-                        </a>
-                        <div class="caption">
-                            <h3>해당사 전용 사이트 템플릿 제작</h3>
-                            <p>반응형 사이트</p>
-                            <dl class="both">
-                                <dt>프로젝트 설명</dt>
-                                <dd>해당사에서 사이트를 새로 제작시 필요한 기본템플릿을 가진 사이트 구축</dd>
-                                <dt>역할 및 담당</dt>
-                                <dd>퍼블리싱, 기획, 디자인</dd>
-                                <dt>기여도</dt>
-                                <dd>100%</dd>
-                                <dt>성과</dt>
-                                <dd>해당 템플릿을 활용하는 웹사이트 초기 세팅작업일 축소</dd>                                                                 
-                            </dl>
-                            <div classs="button_wrap"><a href="https://2ju2.github.io/markpro/" class="btn">Website Go</a></div>
-                        </div>
-                    </li>  
-                    <li class="shadow pf_4">
-                            <a href="http://dbfpzk666.dothome.co.kr/viget/juhee/index.html">
-                                <figure><img src="img/pc_viget.png"></figure>
-                            </a>
-                            <div class="caption">
-                                <h3>www.viget.com 카피페이지</h3>
-                                <p>반응형 사이트</p>
-                                <dl class="both">
-                                    <dt>프로젝트 설명</dt>
-                                    <dd>www.viget.com 홈페이지 디자인을 활용하여, 새로운 소스로 제작</dd>
-                                    <dt>역할 및 담당</dt>
-                                    <dd>퍼블리싱</dd>
-                                    <dt>기여도</dt>
-                                    <dd>100%</dd>
-                                </dl>
-                                <div classs="button_wrap"><a href="http://dbfpzk666.dothome.co.kr/viget/juhee/index.html" class="btn">Website Go</a></div>
-                            </div>
-                        </li>                                                          
+                    </li>                                                           
                 </ul>
             </section>
 
