--- a/index.html
+++ b/index.html
@@ -198,12 +198,10 @@
                         <div>
                             <h3>MY INFO</h3>
                             <dl class="both">
-                                <dt>이메일</dt>
-                                <dd><a href="mailto:juhee0_0@naver.com">juhee0_0@naver.com</a></dd>
-                                <dt>전화</dt>
-                                <dd><a href="tel:010-4829-7218">010.4829.7218</a></dd>
-                                <dt>거주지</dt>
+								<dt>거주지</dt>
                                 <dd>서울</dd>
+                                <dt>직종</dt>
+                                <dd>웹 퍼블리셔</dd>
                             </dl>
                         </div>
                     </section>
