--- a/index.html
+++ b/index.html
@@ -187,7 +187,27 @@
                             </dl>
                             <div classs="button_wrap"><a href="http://www.markpro.com/" class="btn">Website Go</a></div>
                         </div>
-                    </li>                                                           
+                    </li>   
+					<li class="shadow pf_5">
+                        <a href="https://bb32343.wixsite.com/website-4">
+                            <figure><img src="img/pc_koreaiz.png"></figure>
+                        </a>
+                        <div class="caption">
+                            <h3>한국친환경인증협회 PC 사이트 제작</h3>
+                            <p>wix 템플릿을 활용한 사이트</p>
+                            <dl class="both">
+                                <dt>프로젝트 설명</dt>
+                                <dd>wix를 활용하여, 사이트 구축</dd>
+                                <dt>역할 및 담당</dt>
+                                <dd>퍼블리싱, 기획, 디자인</dd>
+                                <dt>기여도</dt>
+                                <dd>80%</dd>
+                                <dt>성과</dt>
+                                <dd>해당사 메인사이트 구축</dd>                                                                 
+                            </dl>
+                            <div classs="button_wrap"><a href="https://bb32343.wixsite.com/website-4" class="btn">Website Go</a></div>
+                        </div>
+                    </li> 
                 </ul>
             </section>
 
